--- a/Floortec Sealer/index.html
+++ b/Floortec Sealer/index.html
@@ -28,7 +28,7 @@
         margin: 0;
         padding: 0;
         background-color: #f9fafb;
-        color: #12332a;
+        color: #07020f;
         font-size: 9.5pt;
         line-height: 1.5;
       }
@@ -67,13 +67,13 @@
         margin: 0;
         font-size: 13.5pt;
         font-weight: 700;
-        color: #12332a;
+        color: #07020f;
         letter-spacing: 0.7px;
       }
       .header-text .subtitle {
         font-size: 10.5pt;
         font-weight: 600;
-        color: #4fd1c5;
+        color: #07020f;
         margin: 2px 0 0;
         text-transform: uppercase;
         letter-spacing: 1.1px;
@@ -103,7 +103,7 @@
       li {
         margin: 4px 0;
         font-size: 9.5pt;
-        color: #12332a;
+        color: #07020f;
       }
       ul {
         padding-left: 28px;
@@ -119,7 +119,7 @@
         content: "\f058";
         font-family: "Font Awesome 6 Free";
         font-weight: 900;
-        color: #12332a;
+        color: #4fd1c5;
         font-size: 11pt;
         position: absolute;
         left: -23px;
@@ -191,7 +191,7 @@
         align-items: center;
         justify-content: center;
         font-size: 9.5pt;
-        color: #12332a;
+        color: #07020f;
         position: running(footer);
         border-radius: 6px;
       }
@@ -207,9 +207,12 @@
         margin-bottom: 0;
       }
       .footer img {
-        max-width: 110px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 210px;
         height: auto;
-        margin-bottom: 4px;
+        margin: 0 auto 4px;
       }
       .footer span {
         display: flex;
@@ -227,19 +230,36 @@
         font-family: "Font Awesome 6 Free";
         font-weight: 900;
         font-size: 13pt;
+        color: #07020f;
+      }
+      .footer-row a{
+        text-decoration: none;
         color: #12332a;
       }
-      .footer span:nth-child(1)::before {
-        content: "\f095";
+      .footer-row:nth-child(2) span:nth-child(1)::before {
+        content: "\f275"; /* Industry icon for manufacturer */
       }
-      .footer span:nth-child(2)::before {
-        content: "\f017";
+      .footer-row:nth-child(2) span:nth-child(2)::before {
+        content: "\f095"; /* Phone icon */
       }
-      .footer span:nth-child(3)::before {
-        content: "\f3c5";
+      .footer-row:nth-child(3) span:nth-child(1)::before {
+        content: "\f3c5"; /* Location pin icon */
       }
-      .footer span:nth-child(4)::before {
-        content: "\f0e0";
+      .footer-row:nth-child(3) span:nth-child(2)::before {
+        content: "\f017"; /* Clock icon */
+      }
+      .footer-row:nth-child(4) span:nth-child(1)::before {
+        content: "\f0e0"; /* Envelope icon */
+      }
+      .footer-row:nth-child(4) span:nth-child(2)::before {
+        content: "\f0ac"; /* Globe icon for website */
+      }
+      .footer a {
+        color: #07020f;
+        text-decoration: none;
+      }
+      .footer a:hover {
+        text-decoration: underline;
       }
       .instruction-paragraph {
         margin: 7px 0;
@@ -253,12 +273,13 @@
         background-color: #e6f0fa;
       }
       .instruction-paragraph strong {
-        color: #12332a;
+        color: #07020f;
         font-weight: 600;
       }
-      .p_center{
-          text-align: center;
-        }
+      .p_center {
+        margin: 30px 0 11px;
+        text-align: center;
+      }
       @media print {
         body {
           margin: 0;
@@ -290,7 +311,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/img/лого%20с%20r%20темно-зеленый.png"
+          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/КОМПАУНД%20ЭПОКСИД/img/лого%20с%20r%20темно-зеленый.png"
           alt="Логотип"
         />
         <div class="header-text instruction-paragraph">
@@ -438,16 +459,22 @@
       </p>
       <div class="footer">
         <img
-          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/img/лого%20с%20r%20темно-зеленый.png"
+          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/КОМПАУНД%20ЭПОКСИД/img/лого%20с%20r%20темно-зеленый.png"
           alt="Логотип"
         />
         <div class="footer-row">
+          <span>Производитель: TOO "Conteria CA"</span>
           <span>8 800 080 34 33</span>
+        </div>
+        <div class="footer-row">
+          <span>Казахстан, г. Астана, Промзона, 6/2</span>
           <span>09:00 - 19:00</span>
         </div>
         <div class="footer-row">
-          <span>Казахстан, г. Астана, мкр. Промзона 1</span>
           <span>info@conteria.kz</span>
+          <span
+            ><a href="https://conteria.kz" target="_blank">conteria.kz</a></span
+          >
         </div>
       </div>
     </div>
