--- a/КОМПАУНД ЭПОКСИД/index.html
+++ b/КОМПАУНД ЭПОКСИД/index.html
@@ -15,7 +15,7 @@
     <style>
       @page {
         size: A4;
-        margin: 20pt;
+        margin: 18pt;
         @top-center {
           content: element(header);
         }
@@ -28,34 +28,34 @@
         margin: 0;
         padding: 0;
         background-color: #f9fafb;
-        color: #12332a;
-        font-size: 10pt;
-        line-height: 1.6;
+        color: #07020f;
+        font-size: 9.5pt;
+        line-height: 1.5;
       }
       .container {
         width: 100%;
         max-width: 842px;
         margin: 0 auto;
-        padding: 10px 20px;
+        padding: 8px 18px;
         background-color: #ffffff;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         box-sizing: border-box;
         border-radius: 10px;
-        min-height: calc(1123px - 40px);
+        min-height: calc(1123px - 36px);
       }
       .header {
         width: 100%;
         max-width: 842px;
         margin: 0 auto;
-        padding: 10px 20px;
+        padding: 8px 18px;
         text-align: left;
         position: running(header);
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 18px;
       }
       .header img {
-        max-width: 240px;
+        max-width: 230px;
         height: auto;
       }
       .header-text {
@@ -65,23 +65,23 @@
       }
       .header-text p {
         margin: 0;
-        font-size: 14pt;
+        font-size: 13.5pt;
         font-weight: 700;
-        color: #12332a;
-        letter-spacing: 0.8px;
+        color: #07020f;
+        letter-spacing: 0.7px;
       }
       .header-text .subtitle {
-        font-size: 11pt;
+        font-size: 10.5pt;
         font-weight: 600;
-        color: #4fd1c5;
+        color: #07020f;
         margin: 2px 0 0;
         text-transform: uppercase;
-        letter-spacing: 1.2px;
+        letter-spacing: 1.1px;
       }
       .two-columns {
         display: flex;
         justify-content: space-between;
-        gap: 20px;
+        gap: 18px;
         align-items: flex-start;
       }
       .column {
@@ -89,28 +89,28 @@
         align-self: flex-start;
       }
       h2 {
-        font-size: 14pt;
+        font-size: 13.5pt;
         color: #ffffff;
         background-color: #12332a;
-        padding: 10px 15px;
-        margin: 10px 0;
+        padding: 9px 13px;
+        margin: 9px 0;
         border-radius: 6px;
         font-weight: 600;
-        letter-spacing: 0.5px;
+        letter-spacing: 0.4px;
       }
       p,
       ul,
       li {
-        margin: 5px 0;
-        font-size: 10pt;
-        color: #12332a;
+        margin: 4px 0;
+        font-size: 9.5pt;
+        color: #07020f;
       }
       ul {
-        padding-left: 30px;
+        padding-left: 28px;
         list-style: none;
       }
       ul li {
-        margin-bottom: 5px;
+        margin-bottom: 4px;
         position: relative;
         display: flex;
         align-items: center;
@@ -119,10 +119,10 @@
         content: "\f058";
         font-family: "Font Awesome 6 Free";
         font-weight: 900;
-        color: #12332a;
-        font-size: 12pt;
+        color: #4fd1c5;
+        font-size: 11pt;
         position: absolute;
-        left: -25px;
+        left: -23px;
         top: 50%;
         transform: translateY(-50%);
       }
@@ -130,16 +130,16 @@
         width: 100%;
         border-collapse: separate;
         border-spacing: 0;
-        margin: 10px 0;
+        margin: 9px 0;
         border-radius: 6px;
         overflow: hidden;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
       }
       th,
       td {
-        padding: 10px;
+        padding: 9px;
         text-align: center;
-        font-size: 9pt;
+        font-size: 8.5pt;
         border-bottom: 0.5px solid #e2e8f0;
       }
       th {
@@ -147,7 +147,7 @@
         color: #ffffff;
         font-weight: 600;
         text-transform: uppercase;
-        letter-spacing: 0.5px;
+        letter-spacing: 0.4px;
       }
       td {
         background-color: #f7fafc;
@@ -160,15 +160,15 @@
       }
       .technical-table {
         width: 100%;
-        margin: 10px auto;
-        font-size: 8pt;
+        margin: 9px auto;
+        font-size: 7.5pt;
         border-collapse: collapse;
         word-wrap: break-word;
       }
       .technical-table th,
       .technical-table td {
         text-align: center;
-        padding: 6px;
+        padding: 5px;
         border: 0.5px solid #e2e8f0;
         max-width: 0;
         overflow-wrap: break-word;
@@ -183,15 +183,15 @@
       .footer {
         width: 100%;
         max-width: 842px;
-        margin: 10px auto 0;
-        padding: 10px 20px;
+        margin: 9px auto 0;
+        padding: 9px 18px;
         background: #4fd1c5;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 10pt;
-        color: #12332a;
+        font-size: 9.5pt;
+        color: #07020f;
         position: running(footer);
         border-radius: 6px;
       }
@@ -199,25 +199,32 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 18px;
         width: 100%;
-        margin-bottom: 5px;
+        margin-bottom: 4px;
       }
       .footer-row:last-child {
         margin-bottom: 0;
       }
       .footer img {
-        max-width: 120px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 210px;
         height: auto;
-        margin-bottom: 5px;
+        margin: 0 auto 4px;
       }
       .footer span {
         display: flex;
         align-items: center;
         position: relative;
-        padding-left: 30px;
+        padding-left: 28px;
         font-weight: 600;
-        letter-spacing: 0.5px;
+        letter-spacing: 0.4px;
+      }
+      .footer-row a{
+        text-decoration: none;
+        color: #12332a;
       }
       .footer span::before {
         position: absolute;
@@ -226,24 +233,37 @@
         transform: translateY(-50%);
         font-family: "Font Awesome 6 Free";
         font-weight: 900;
-        font-size: 14pt;
-        color: #12332a;
+        font-size: 13pt;
+        color: #07020f;
       }
-      .footer span:nth-child(1)::before {
-        content: "\f095";
+      .footer-row:nth-child(2) span:nth-child(1)::before {
+        content: "\f275"; /* Industry icon for manufacturer */
       }
-      .footer span:nth-child(2)::before {
-        content: "\f017";
+      .footer-row:nth-child(2) span:nth-child(2)::before {
+        content: "\f095"; /* Phone icon */
       }
-      .footer span:nth-child(3)::before {
-        content: "\f3c5";
+      .footer-row:nth-child(3) span:nth-child(1)::before {
+        content: "\f3c5"; /* Location pin icon */
       }
-      .footer span:nth-child(4)::before {
-        content: "\f0e0";
+      .footer-row:nth-child(3) span:nth-child(2)::before {
+        content: "\f017"; /* Clock icon */
+      }
+      .footer-row:nth-child(4) span:nth-child(1)::before {
+        content: "\f0e0"; /* Envelope icon */
+      }
+      .footer-row:nth-child(4) span:nth-child(2)::before {
+        content: "\f0ac"; /* Globe icon for website */
+      }
+      .footer a {
+        color: #07020f;
+        text-decoration: none;
+      }
+      .footer a:hover {
+        text-decoration: underline;
       }
       .instruction-paragraph {
-        margin: 8px 0;
-        padding: 10px;
+        margin: 7px 0;
+        padding: 9px;
         background-color: #f7fafc;
         border-left: 4px solid #4fd1c5;
         border-radius: 4px;
@@ -253,8 +273,12 @@
         background-color: #e6f0fa;
       }
       .instruction-paragraph strong {
-        color: #12332a;
+        color: #07020f;
         font-weight: 600;
+      }
+      .p_center {
+        margin: 30px 0 11px;
+        text-align: center;
       }
       @media print {
         body {
@@ -264,7 +288,7 @@
         .container {
           box-shadow: none;
           margin: 0pt auto;
-          padding: 0px 20px;
+          padding: 0px 18px;
         }
         .header {
           background: none;
@@ -273,8 +297,8 @@
           background: #4fd1c5;
         }
         .container {
-          padding-top: 10px;
-          padding-bottom: 10px;
+          padding-top: 8px;
+          padding-bottom: 8px;
         }
         .technical-table tr:hover td,
         .instruction-paragraph:hover {
@@ -287,7 +311,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/img/лого%20с%20r%20темно-зеленый.png"
+          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/КОМПАУНД%20ЭПОКСИД/img/лого%20с%20r%20темно-зеленый.png"
           alt="Логотип"
         />
         <div class="header-text instruction-paragraph">
@@ -354,9 +378,12 @@
           <p class="instruction-paragraph">
             Смешанный материал необходимо перелить в другую емкость и тщательно
             перемешать в течение 1 минуты. Общее время перемешивания не должно
-            суммарно превышать 7 минут. <i>Несоблюдение данного требования может
-            привести к образованию дефектов, проявляющихся в виде зон с
-            пониженной твёрдостью покрытия.</i>
+            суммарно превышать 7 минут.
+            <i
+              >Несоблюдение данного требования может привести к образованию
+              дефектов, проявляющихся в виде зон с пониженной твёрдостью
+              покрытия.</i
+            >
           </p>
           <p class="instruction-paragraph">
             <strong><span class="rep_p">Внимание!</span></strong> Значительное
@@ -440,7 +467,6 @@
             на слизистые оболочки немедленно промыть большим количеством воды и
             обратиться за медицинской помощью.
           </p>
-
         </div>
         <div class="column">
           <h2>Упаковка, срок хранения</h2>
@@ -659,18 +685,32 @@
           </p>
         </div>
       </div>
+      <p class="p_center">
+        <i
+          >Производитель не несет ответственности за последствия нарушений
+          технологии и указаний производителя, в том числе связанных с тем, что
+          потребитель не ознакомился с листами технической информации и
+          инструкциями по применению материалов.</i
+        >
+      </p>
       <div class="footer">
         <img
-          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/img/лого%20с%20r%20темно-зеленый.png"
+          src="https://raw.githubusercontent.com/SuleymanovTahir/FloorTec/refs/heads/main/КОМПАУНД%20ЭПОКСИД/img/лого%20с%20r%20темно-зеленый.png"
           alt="Логотип"
         />
         <div class="footer-row">
+          <span>Производитель: TOO "Conteria CA"</span>
           <span>8 800 080 34 33</span>
+        </div>
+        <div class="footer-row">
+          <span>Казахстан, г. Астана, Промзона, 6/2</span>
           <span>09:00 - 19:00</span>
         </div>
         <div class="footer-row">
-          <span>Казахстан, г. Астана, мкр. Промзона 1</span>
           <span>info@conteria.kz</span>
+          <span
+            ><a href="https://conteria.kz" target="_blank">conteria.kz</a></span
+          >
         </div>
       </div>
     </div>
